@@ -1,24 +1,27 @@
 package it.gov.pagopa.rtd.ms.pieventprocessor.tkm.splitter;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.awaitility.Awaitility.await;
+
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import it.gov.pagopa.rtd.ms.pieventprocessor.TestUtils;
 import it.gov.pagopa.rtd.ms.pieventprocessor.common.cloudevent.CloudEvent;
-import it.gov.pagopa.rtd.ms.pieventprocessor.configuration.CommonConsumerConfiguration;
 import it.gov.pagopa.rtd.ms.pieventprocessor.tkm.events.CardChangeType;
 import it.gov.pagopa.rtd.ms.pieventprocessor.tkm.events.TokenManagerCardChanged;
+import java.time.Duration;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import org.apache.kafka.clients.consumer.Consumer;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.stream.function.StreamBridge;
-import org.springframework.cloud.stream.test.binder.TestSupportBinderAutoConfiguration;
 import org.springframework.kafka.core.DefaultKafkaConsumerFactory;
 import org.springframework.kafka.test.EmbeddedKafkaBroker;
 import org.springframework.kafka.test.context.EmbeddedKafka;
@@ -27,22 +30,11 @@ import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
 
-import java.time.Duration;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.awaitility.Awaitility.await;
-
-@SpringBootTest(classes = {CommonConsumerConfiguration.class})
+@SpringBootTest
 @ActiveProfiles("test")
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
 @EmbeddedKafka(topics = {"${topics.rtd-slit-by-pi.topic}"}, partitions = 2, bootstrapServersProperty = "spring.embedded.kafka.brokers")
-@EnableAutoConfiguration(exclude = {TestSupportBinderAutoConfiguration.class})
 @TestPropertySource("classpath:application-test.yml")
-@ExtendWith(MockitoExtension.class)
 class TokenManagerCardEventPublisherTest {
   private static final String OUT_BINDING = "rtdSplitByPi-out-0";
 
@@ -89,7 +81,7 @@ class TokenManagerCardEventPublisherTest {
     final var cloudEventType = new TypeReference<CloudEvent<TokenManagerCardChanged>>(){};
     final var events = IntStream.range(0, 10)
             .mapToObj(i -> TestUtils.prepareRandomTokenManagerEvent(CardChangeType.INSERT_UPDATE).build())
-            .collect(Collectors.toList());
+            .toList();
 
     events.forEach(it -> cardEventPublisher.sendTokenManagerCardChanged(it));
 
